# marvin-rust

./: Cargo.toml  example.json
.cargo/: config.toml
src/: calendar.rs  main.rs  telegram.rs
src/telegram/: client.rs
